@@ -14,6 +14,7 @@ Hbase Change Log
    HBASE-622   Remove StaticTestEnvironment and put a log4j.properties in src/test
    HBASE-624   Master will shut down if number of active region servers is zero
                even if shutdown was not requested
+   HBASE-629   Split reports incorrect elapsed time
 
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
